updated follower and mail sending
